<?xml version="1.0"?>
<package format="2">
  <name>hat_driver</name>
  <version>0.0.0</version>
  <description>driver for Jacky LEDs and start/stop</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
